feat: implement nav and rendering of episodes

--- a/content/anime/mekakucity-actors/1.artificial_enemy.md
+++ b/content/anime/mekakucity-actors/1.artificial_enemy.md
@@ -1,7 +1,7 @@
 ---
 kgs_layout: "anime_episode"
-title: "Episode 3"
-description: "Mekakucity Actors Episode 3"
+title: "Episode 1 : Artificial Enemy"
+description: "Mekakucity Actors Episode 1 : Artificial Enemy"
 players:
     - player: "video"
       url: "https://media.giphy.com/media/111ebonMs90YLu/giphy.mp4"
