--- a/content/anime/mekakucity-actors/2.kisaragi_attention.md
+++ b/content/anime/mekakucity-actors/2.kisaragi_attention.md
@@ -1,7 +1,7 @@
 ---
 kgs_layout: "anime_episode"
-title: "Episode 1 : Jinzou Enemy"
-description: "Mekakucity Actors Episode 1 : Jinzou Enemy"
+title: "Episode 2 : Kisaragi Attention"
+description: "Mekakucity Actors Episode 2 : Kisaragi Attention"
 players:
     - player: "video"
       url: "https://media.giphy.com/media/111ebonMs90YLu/giphy.mp4"
