--- a/content/anime/mekakucity-actors/3.blindfold_code.md
+++ b/content/anime/mekakucity-actors/3.blindfold_code.md
@@ -1,7 +1,7 @@
 ---
 kgs_layout: "anime_episode"
-title: "Episode 2"
-description: "Mekakucity Actors Episode 1 : Jinzou Enemy"
+title: "Episode 3 : Blindfold Code"
+description: "Mekakucity Actors Episode 3"
 players:
     - player: "video"
       url: "https://media.giphy.com/media/111ebonMs90YLu/giphy.mp4"
