feat(anime): implement front-end calls to the back

--- a/content/anime/mekakucity-actors/2.kisaragi_attention.md
+++ b/content/anime/mekakucity-actors/2.kisaragi_attention.md
@@ -2,7 +2,10 @@
 kgs_layout: "anime_episode"
 title: "Episode 2 : Kisaragi Attention"
 description: "Mekakucity Actors Episode 2 : Kisaragi Attention"
+thumb: "https://via.placeholder.com/720x480/c4c4c4/000000.jpeg?text=2)+►"
 players:
     - player: "video"
       url: "https://media.giphy.com/media/111ebonMs90YLu/giphy.mp4"
 ---
+
+épisode 2 résumé
