doc: anime metadata

--- a/content/anime/mekakucity-actors/2.kisaragi-attention.md
+++ b/content/anime/mekakucity-actors/2.kisaragi-attention.md
@@ -1,11 +1,13 @@
 ---
 kgs_layout: "anime_episode"
-title: "Episode 2 : Kisaragi Attention"
-description: "Mekakucity Actors Episode 2 : Kisaragi Attention"
-thumb: "https://via.placeholder.com/720x480/c4c4c4/000000.jpeg?text=2)+►"
+title: "Act 02 : Kisaragi Attention"
+description: "Mekakucity Actors Episode 2 : Kisaragi attention"
+thumb: "/dev_assets/mca02.webp"
 players:
     - player: "video"
-      url: "https://media.giphy.com/media/111ebonMs90YLu/giphy.mp4"
+      url: "/dev_assets/dev.mp4"
 ---
 
-épisode 2 résumé
+Momo Kisaragi est une idol qui, du fait de sa célébrité, attire sans cesse l'attention des passants une fois dans la rue. Cela l'empêche de mener une scolarité saine et de se faire des amis, car cette attention ne semble pas naturelle.
+
+Après s'être vue accordé un jour de congés, elle décide de sortir pour acheter un strap. Sur son chemin, elle croisa la route d'un jeune garçon qui n'a jamais visité la ville, et décide de l'aider à trouver son chemin.
