feat: add nuxt-img-content but files having a dot are getting ignored

--- a/content/anime/mekakucity-actors/1.jinzou-enemy.md
+++ b/content/anime/mekakucity-actors/1.jinzou-enemy.md
@@ -2,10 +2,10 @@
 kgs_layout: "anime_episode"
 title: "Act 01 : Jinzou Enemy"
 description: "Mekakucity Actors Episode 1 : Artificial enemy"
-thumb: "/dev_assets/mca01.webp"
+thumb: "thumbs/mca01.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
 
 _Jinzou Enemy est le premier épisode de l'adaptation animée de la série Kagerou Project, appelée Mekakucity Actors_
