--- a/content/anime/mekakucity-actors/11.otsukimi-recital.md
+++ b/content/anime/mekakucity-actors/11.otsukimi-recital.md
@@ -2,8 +2,8 @@
 kgs_layout: "anime_episode"
 title: "Act 11 : Otsukimi Recital"
 description: "Mekakucity Actors Episode 11 : Moon-viewing recital"
-thumb: "/dev_assets/mca11.webp"
+thumb: "thumbs/mca11.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
