--- a/content/anime/mekakucity-actors/6.headphone-actors.md
+++ b/content/anime/mekakucity-actors/6.headphone-actors.md
@@ -2,8 +2,8 @@
 kgs_layout: "anime_episode"
 title: "Act 06 : Headphone Actors"
 description: "Mekakucity Actors Episode 6 : Headphone actors"
-thumb: "/dev_assets/mca06.webp"
+thumb: "thumbs/mca06.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
