--- a/content/anime/mekakucity-actors/8.losstime-memory.md
+++ b/content/anime/mekakucity-actors/8.losstime-memory.md
@@ -2,8 +2,8 @@
 kgs_layout: "anime_episode"
 title: "Act 08 : Lost Time Memory"
 description: "Mekakucity Actors Episode 8 : Lost time memory"
-thumb: "/dev_assets/mca08.webp"
+thumb: "thumbs/mca08.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
