--- a/content/anime/mekakucity-actors/10.kuusou-forest.md
+++ b/content/anime/mekakucity-actors/10.kuusou-forest.md
@@ -2,8 +2,10 @@
 kgs_layout: "anime_episode"
 title: "Act 10 : Kuusou Forest"
 description: "Mekakucity Actors Episode 10 : Fantasy forest"
-thumb: "/dev_assets/mca10.webp"
+thumb: "thumbs/mca10.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
+
+![thumbs/mca10.webp](thumbs/mca10.webp)
