--- a/content/anime/mekakucity-actors/4.kagerou-daze.md
+++ b/content/anime/mekakucity-actors/4.kagerou-daze.md
@@ -2,11 +2,10 @@
 kgs_layout: "anime_episode"
 title: "Act 04 : Kagerou Daze"
 description: "Mekakucity Actors Episode 4 : Heat haze days"
-thumb: "/dev_assets/mca04.webp"
+thumb: "thumbs/mca04.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
 
-Hibiya est interloqué par sa rencontre avec Momo, qu'il finit par reconnaître après un de ses passages à la télé. Il passe ses vacances d'été aux côtés de Hiyori, une amie pour laquelle il a le béguin, mais qui ne lui rend pas vraiment la pareille. Hibiya cherche à parler avec elle de ses rêves étranges où il tente désespérément de la sauver. 
-
+Hibiya est interloqué par sa rencontre avec Momo, qu'il finit par reconnaître après un de ses passages à la télé. Il passe ses vacances d'été aux côtés de Hiyori, une amie pour laquelle il a le béguin, mais qui ne lui rend pas vraiment la pareille. Hibiya cherche à parler avec elle de ses rêves étranges où il tente désespérément de la sauver.
