--- a/content/anime/mekakucity-actors/7.konoha-no-sekai.md
+++ b/content/anime/mekakucity-actors/7.konoha-no-sekai.md
@@ -2,8 +2,8 @@
 kgs_layout: "anime_episode"
 title: "Act 07 : Konoha no Sekai Jijou"
 description: "Mekakucity Actors Episode 7 : Konoha's state of the world"
-thumb: "/dev_assets/mca07.webp"
+thumb: "thumbs/mca07.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
