--- a/content/anime/mekakucity-actors/9.ayano-no-koufuku.md
+++ b/content/anime/mekakucity-actors/9.ayano-no-koufuku.md
@@ -2,8 +2,8 @@
 kgs_layout: "anime_episode"
 title: "Act 09 : Ayano no Koufuku Riron"
 description: "Mekakucity Actors Episode 9 : Ayano's theory of happiness"
-thumb: "/dev_assets/mca09.webp"
+thumb: "thumbs/mca09.webp"
 players:
     - player: "video"
-      url: "/dev_assets/dev.mp4"
+      url: "videos/dev.mp4"
 ---
