--- a/content/anime/mekakucity-actors/01.jinzou-enemy.md
+++ b/content/anime/mekakucity-actors/01.jinzou-enemy.md
@@ -12,4 +12,4 @@ _Jinzou Enemy est le premier épisode de l'adaptation animée de la série Kager
 
 Shintaro Kisaragi, un jeune homme de 18 ans, est un NEET enfermé dans sa chambre depuis deux ans. Il n'a que pour seule compagnie Ene, une cyber-girl qui passe ses journées à l'embêter.
 
-Manque de chance, une des blagues d'Ene tourne mal et contrains le jeune-homme à sortir de chez lui. Pour combler le tout, il finit séquestré au centre commercial parmi des terroristes, entouré de deux otages à l'attitude étrange. Qui aurait pu prédire de telles circonstances en cette chaude et lourde journée du 14 aout ?
+Un jour, à cause d'une blague d'Ene, Shintaro est contraint de sortir de chez lui. Mais sa journée banale est sur le point de tourner en enfer...
